# deepseek-qwen-distill

./: .env  .gitignore  .pre-commit-config.yaml  README.md  app.py  benchmark.ipynb  benchmark.py  benchmark_v2.py  build_flash_attn.sh  inference.py  inference.sh  pyproject.toml  slurm-189832.out  slurm-671448.out  start_app.sh  train-stage-2.py  train.sh  training.py
.github/: PULL_REQUEST_TEMPLATE
doc/: tech-report.md
qs_data_generate/: README.md  chemQA.py  cot_generate.ipynb
response_generate/: ChemQA.py  cot_generate.ipynb
